css/main.css
body {
    font-family:'Roboto', sans-serif;
}

/***** GRID *****/

.full-width {
    width: 100%;
    margin: 0 auto;
}

.half-width {
    width: 50%;
    float: left;
}

.third-width {
    width: 33.33%;
    float: left;
}

/***** HEADER *****/
#header {
    height: 550px;
    background: url('../img/header-image.jpeg');
    background-size: cover;
}
h1 {
    font-size: 60px;
    font-family: 'Roboto Slab', bold, serif;
    font-weight: 700;
    text-align: right;
    color: #7C898B;
    padding: 100px 40px 0px 0px;
    margin-top: 0px;
}
 h2 {
    font-size: 48px;
    font-weight: 400;
    text-align: right;
    color: #322214;
    padding-left: 50%;
    padding-right: 40px;

}

/***** SKILLS *****/
#skills {
    background-color: #93A3B1;
    height: 300px;
    text-align: center;
}
#skills img {
    margin-top: 40px;
    text-align: center;
}
#skills h3 {
    font-size: 20px;
    font-family: 'Roboto Slab', serif;
    font-weight: 700;
    text-align: center;
    color: #322214;
}
#skills p {
    font-size: 18px;
    font-weight: 400;
    color: #322214;
    margin: 0px 50px;
}

/***** Portfolio *****/
#portfolio {
    height: 550px;
    text-align: center;
}
#portfolio h3 {
    font-size: 36px;
    font-family: 'Roboto Slab', serif;
    font-weight: 700;
    text-align: center;
    color: #322214;
}
#portfolio h4 {
    font-size: 24px;
    font-weight: 700;
    color: #322214;
    margin: 20px 50px 0px 50px;
}
#portfolio p {
    font-size: 24px;
    font-weight: 400;
    color: #322214;
}
#portfolio img {
    width: 85%;
    text-align: center;
}

    
/***** ABOUT *****/
#about {
    height: 550px;
    background-color: #93A3B1;
    margin: 0px;
}
#about h5 {
    font-size: 36px;
    font-family: 'Roboto Slab', serif;
    font-weight: 700;
    text-align: center;
    color: #322214;
    padding-top: 40px;
}
#about img {
    width: 85%;
    margin: 0px 50px;
}
#about p {
    font-size: 24px;
    font-weight: 400;
    color: #322214;
}
#about .half-width {
    float: left;
}
    
/***** CONTACT *****/
#contact {
    height: 300px;
    background-color: #7C898B;
}
#contact h5 {
    font-size: 36px;
    font-family: 'Roboto Slab', serif;
    font-weight: 700;
    text-align: center;
    color: #ffffff;
    margin-top: 0;
    margin-bottom: 25px;
    padding-top: 40px;
}
#contact p {
    font-size: 24px;
    font-weight: 400;
    color: #ffffff;
    line-height: 10px;
}
#contact .third-width {
    text-align: center;
}
#contact ul {
    padding-left: 0px;
}
#contact ul li {
    display: inline-block;
    padding: 10px;
    text-align: center;
}
#contact a {
    color: #36384C;
    text-decoration: none;
}
#contact h6 {
    font-size: 24px;
    font-style: italic;
    color: #ffffff;
    margin-top: 0px;
    margin-bottom: 0px;
}
    
    
/***** FOOTER *****/
#copy-right p {
    font-size: 14px;
    background-color: #ffffff;
    color: #000000;
    text-align: center;
    padding: 12px;
    margin-top: 0px;
    margin-bottom: 0 px;
}

